<resources>
    <string name="app_name">Calendar</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="description">someDescription</string>
    <string name="delete">Delete</string>
    <string name="dialog_title">Select an Action</string>
    <string name="dialog_message">Would you like to create a task for %1$s?</string>
    <string name="create_task">Create Task</string>
    <string name="cancel">Cancel</string>
    <string name="task_title_hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
</resources>